Adiciona rota para o catálogo de traduções JavaScript.

--- a/tempmail/templates/parciais/_head.html
+++ b/tempmail/templates/parciais/_head.html
@@ -39,6 +39,9 @@
 <script src="{% static 'vendor/dompurify/dompurify-3.2.7.min.js' %}"></script>
 <script src="{% static 'vendor/htmx/htmx-2.0.8.min.js' %}"></script>
 
+<!-- traduções js -->
+<script src="{% url 'javascript-catalog' %}"></script>
+
 <script>
     tailwind.config = {
         darkMode: 'class',
