--- a/tempmail/templates/contato.html
+++ b/tempmail/templates/contato.html
@@ -115,7 +115,8 @@
                             required
                             class="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-dark-input text-gray-900 dark:text-white focus:ring-2 focus:ring-orange-500 focus:border-transparent resize-vertical"
                             placeholder="{% trans 'Digite sua mensagem aqui...' %}"
-                        ></textarea>
+                        >{% blocktrans %}Preciso de ajuda.{% endblocktrans %}
+                        </textarea>
                     </div>
 
                     <button
