--- a/tempmail/core/templates/core/parciais/dados/_dadosTop.html
+++ b/tempmail/core/templates/core/parciais/dados/_dadosTop.html
@@ -20,7 +20,7 @@
                         <div class="w-6 h-6 bg-green-100 dark:bg-green-900 rounded-full flex items-center justify-center">
                             <i class="fas fa-globe text-green-600 text-xs"></i>
                         </div>
-                        <span class="font-medium">{{ site.dominio|truncatechars:50|escape }}</span>
+                        <span class="font-medium" data-external-link="{{ site.dominio }}">{{ site.dominio|truncatechars:50|escape }}</span>
                     </div>
                 </td>
                 <td class="text-right font-semibold">{{ site.quantidade }}</td>
@@ -50,7 +50,7 @@
             <div class="w-8 h-8 bg-green-100 dark:bg-green-900 rounded-full flex items-center justify-center">
                 <i class="fas fa-globe text-green-600 text-sm"></i>
             </div>
-                            <span class="font-medium text-gray-900 dark:text-white">{{ site.dominio|truncatechars:50|escape }}</span>
+            <span class="font-medium text-gray-900 dark:text-white" data-external-link="{{ site.dominio }}">{{ site.dominio|truncatechars:50|escape }}</span>
         </div>
         <div class="text-right">
             <div class="font-semibold text-gray-900 dark:text-white">{{ site.quantidade }}</div>
