--- a/tempmail/templates/base.html
+++ b/tempmail/templates/base.html
@@ -23,9 +23,11 @@
   {% block extra_content %}
   {% endblock %}
 
+  {% include 'parciais/_confirmationExternalLinkModal.html' %}
   {% include 'parciais/_toast.html' %}
   {% include 'parciais/_footer.html' %}
 
+  <script src="{% static 'js/global/externalLinks.js' %}"></script>
   <script src="{% static 'js/global/toggleTheme.js' %}"></script>
   <script src="{% static 'js/global/toast.js' %}"></script>
   {% block scripts %}
