--- a/tempmail/core/templates/core/index.html
+++ b/tempmail/core/templates/core/index.html
@@ -49,9 +49,9 @@
                         <div
                             class="flex-1 w-full min-w-0 bg-gradient-to-r from-orange-600 via-orange-400 to-orange-300 p-1.5 sm:p-2 rounded-xl shadow-inner flex items-center relative group min-h-[50px] sm:min-h-[60px]">
                             <div id="emailSkeleton" class="skeleton h-6 sm:h-8 w-3/4 mx-4 bg-white/40 shrink-0"></div>
-                            <div class="flex-1 min-w-0 overflow-hidden">
+                            <div class="flex-1 min-w-0 overflow-hidden flex items-center py-1">
                                 <input type="text" id="emailDisplay" value="" readonly autocomplete="off" data-bwignore
-                                    class="block w-full bg-transparent text-white font-semibold text-[clamp(0.8rem,3vw,1.25rem)] px-2 outline-none cursor-text hidden truncate">
+                                    class="block w-full bg-transparent text-white font-semibold text-[clamp(0.8rem,3vw,1.25rem)] px-2 outline-none cursor-text hidden truncate leading-relaxed">
                             </div>
                         </div>
                     </div>
