--- a/tempmail/core/templates/core/parciais/index/_editModal.html
+++ b/tempmail/core/templates/core/parciais/index/_editModal.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <dialog id="editModal" class="modal modal-bottom sm:modal-middle transition-all duration-300">
-    <div class="modal-box bg-white dark:bg-dark-card w-full max-w-md rounded-xl shadow-2xl p-6 border border-gray-200 dark:border-gray-700">
+    <div class="modal-box bg-white dark:bg-dark-card w-full max-w-lg rounded-xl shadow-2xl p-6 border border-gray-200 dark:border-gray-700 max-h-[90vh]">
         
         <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-4">
             {% trans "Alterar Endereço" %}
